--- a/packages/czbank-rusher-workbench/package.json
+++ b/packages/czbank-rusher-workbench/package.json
@@ -30,7 +30,10 @@
     "eslint-plugin-vue": "^7.4.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-i18n": "^8.22.3",
+    "vue-router": "^3.4.9",
+    "vue-template-compiler": "^2.6.12",
+    "yaml-loader": "^0.6.0"
   },
   "eslintConfig": {
     "root": true,
