[ADDED] lib/workspace.js

--- a/packages/czbank-rusher-server/package.json
+++ b/packages/czbank-rusher-server/package.json
@@ -22,7 +22,9 @@
     "@produck/duck-web": "^0.2.4",
     "@produck/duck-web-koa": "^0.3.4",
     "@produck/duck-web-koa-router": "^0.2.4",
+    "ajv": "^7.0.3",
     "commander": "^6.2.1",
+    "fs-extra": "^9.0.1",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.0.1",
