--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CZBank BI",
   "main": "index.js",
   "scripts": {
-    "dev:server": "node ./script/debug",
+    "dev:server": "node ./script/server",
     "deps:install": "npm install && lerna bootstrap",
     "deps:clean": "lerna clean -y",
     "build:workbench": "lerna run --scope=@plumber-hub/workbench build",
