--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CZBank BI",
   "main": "index.js",
   "scripts": {
-    "dev:server": "node ./script/server",
+		"dev:server": "node ./script/server",
+		"dev:xls": "node ./script/xlsx.js",
     "deps:install": "npm install && lerna bootstrap",
     "deps:clean": "lerna clean -y",
     "build:workbench": "lerna run --scope=@plumber-hub/workbench build",
