--- a/packages/czbank-rusher-server/package.json
+++ b/packages/czbank-rusher-server/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@koa/router": "^10.0.0",
     "@produck/duck": "^0.6.4",
-    "@produck/duck-log": "^0.4.0",
+    "@produck/duck-log": "^0.4.2",
     "@produck/duck-web": "^0.2.6",
     "@produck/duck-web-koa": "^0.3.6",
     "@produck/duck-web-koa-router": "^0.3.0",
@@ -30,6 +30,7 @@
     "koa-compress": "^5.0.1",
     "koa-send": "^5.0.1",
     "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.1"
+    "sqlite3": "^5.0.1",
+    "xlsx": "^0.16.9"
   }
 }
