--- a/packages/czbank-rusher-workbench/package.json
+++ b/packages/czbank-rusher-workbench/package.json
@@ -33,6 +33,7 @@
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.4.9",
     "vue-template-compiler": "^2.6.12",
+    "vuelidate": "^0.7.6",
     "yaml-loader": "^0.6.0"
   },
   "eslintConfig": {
