--- a/packages/czbank-rusher-workbench/jsconfig.json
+++ b/packages/czbank-rusher-workbench/jsconfig.json
@@ -1,6 +1,14 @@
 {
-    "include": [
-      "src/**/*.vue",
-      "src/**/*.js"
-    ]
-  }
+  "compilerOptions": {
+    "target": "es2015",
+    "module": "esnext",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["components/*"]
+    }
+  },
+	"include": [
+		"src/**/*.vue",
+		"src/**/*.js"
+	]
+}
