--- a/packages/czbank-rusher-server/package.json
+++ b/packages/czbank-rusher-server/package.json
@@ -14,7 +14,7 @@
   "scripts": {},
   "bugs": {
     "url": "https://github.com/lichaozhy/czbank-rusher/issues"
-  },
+	},
   "dependencies": {
     "@koa/router": "^10.0.0",
     "@produck/duck": "^0.6.4",
@@ -25,6 +25,7 @@
     "commander": "^7.0.0",
     "fs-extra": "^9.1.0",
     "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.0.1",
     "koa-send": "^5.0.1",
