--- a/packages/czbank-rusher-workbench/package.json
+++ b/packages/czbank-rusher-workbench/package.json
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.1.0",
     "bootstrap-vue": "^2.21.2",
     "bootswatch": "^4.6.0",
+    "bytes": "^3.1.0",
     "echarts": "^4.9.0",
     "eslint": "^7.18.0",
     "eslint-plugin-vue": "^7.5.0",
