--- a/packages/czbank-rusher-server/package.json
+++ b/packages/czbank-rusher-server/package.json
@@ -14,7 +14,8 @@
   "scripts": {},
   "bugs": {
     "url": "https://github.com/lichaozhy/czbank-rusher/issues"
-	},
+  },
+  "bin": "bin/start.js",
   "dependencies": {
     "@koa/router": "^10.0.0",
     "@produck/duck": "^0.6.4",
@@ -29,6 +30,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.0.1",
     "koa-send": "^5.0.1",
+    "koa-static": "^5.0.0",
     "sequelize": "^6.4.0",
     "sqlite3": "^5.0.1",
     "xlsx": "^0.16.9"
