--- a/packages/czbank-rusher-server/package.json
+++ b/packages/czbank-rusher-server/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://github.com/lichaozhy/czbank-rusher/tree/master/packages/czbank-rusher-server#readme",
   "license": "MIT",
   "main": "index.js",
+  "types": "./index.d.ts",
   "private": true,
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@produck/duck-web": "^0.2.7",
     "@produck/duck-web-koa": "^0.3.7",
     "@produck/duck-web-koa-router": "^0.3.1",
+    "@produck/duck-workspace": "^0.1.0",
     "commander": "^7.0.0",
     "fs-extra": "^9.1.0",
     "koa": "^2.13.1",
