--- a/packages/czbank-rusher-workbench/package.json
+++ b/packages/czbank-rusher-workbench/package.json
@@ -14,7 +14,7 @@
   },
   "main": "index.js",
   "dependencies": {
-    "core-js": "^3.8.3",
+    "core-js": "^3.9.0",
     "vue": "^2.6.12"
   },
   "devDependencies": {
@@ -26,17 +26,17 @@
     "bootstrap-vue": "^2.21.2",
     "bootswatch": "^4.6.0",
     "bytes": "^3.1.0",
-    "echarts": "^4.9.0",
-    "eslint": "^7.18.0",
-    "eslint-plugin-vue": "^7.5.0",
+    "echarts": "4.9.0",
+    "eslint": "^7.20.0",
+    "eslint-plugin-vue": "^7.6.0",
     "node-sass": "^5.0.0",
     "numeral": "^2.0.6",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "10.1.1",
     "vue-i18n": "^8.22.4",
-    "vue-router": "^3.4.9",
+    "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.12",
     "vuelidate": "^0.7.6",
-    "vuex": "^3.6.0",
+    "vuex": "^3.6.2",
     "yaml-loader": "^0.6.0"
   },
   "eslintConfig": {
