--- a/packages/czbank-rusher-manager-client/package.json
+++ b/packages/czbank-rusher-manager-client/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.9.0",
-    "onsenui": "^2.11.2",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
-    "vue-onsenui": "^2.6.2",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -25,12 +25,15 @@
     "@vue/cli-service": "~4.5.11",
     "@vue/eslint-config-standard": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap-vue": "^2.21.2",
+    "bootswatch": "^4.6.0",
     "eslint": "^7.20.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.6.0",
+    "numeral": "^2.0.6",
     "sass": "^1.32.8",
     "sass-loader": "10.1.1",
     "vue-template-compiler": "^2.6.12"
