--- a/packages/czbank-rusher-workbench/package.json
+++ b/packages/czbank-rusher-workbench/package.json
@@ -29,7 +29,7 @@
     "echarts": "4.9.0",
     "eslint": "^7.20.0",
     "eslint-plugin-vue": "^7.6.0",
-    "node-sass": "^5.0.0",
+    "sass": "^1.32.8",
     "numeral": "^2.0.6",
     "sass-loader": "10.1.1",
     "vue-i18n": "^8.22.4",
