--- a/packages/czbank-rusher-server/package.json
+++ b/packages/czbank-rusher-server/package.json
@@ -23,6 +23,7 @@
     "@produck/duck-log": "^0.4.2",
     "@produck/duck-web": "^0.2.7",
     "@produck/duck-web-koa": "^0.3.7",
+    "@produck/duck-web-koa-acl": "^0.2.7",
     "@produck/duck-web-koa-router": "^0.3.1",
     "@produck/duck-workspace": "^0.1.0",
     "commander": "^7.1.0",
@@ -32,6 +33,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.0.1",
     "koa-send": "^5.0.1",
+    "koa-session": "^6.1.0",
     "koa-static": "^5.0.0",
     "sequelize": "^6.5.0",
     "sqlite3": "^5.0.2",
