--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "dev:db": "node ./script/db.js",
     "deps:install": "npm install && lerna bootstrap",
     "deps:clean": "lerna clean -y",
-    "build:workbench": "lerna run --scope=@czbank/czbank-rusher-workbench build",
+    "build:administrator": "lerna run --scope=@czbank/czbank-rusher-workbench build",
+    "build:manager": "lerna run --scope=@czbank/czbank-rusher-manager-client build",
     "build:pkg": "node ./script/build.js",
-    "build": "npm run deps:install && npm run build:workbench && npm run build:pkg"
+    "build": "npm run deps:install && npm run build:administrator && npm run build:manager && npm run build:pkg"
   },
   "repository": {
     "type": "git",
