--- a/packages/czbank-rusher-workbench/package.json
+++ b/packages/czbank-rusher-workbench/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "core-js": "^3.9.0",
+    "qrcode": "^1.4.4",
     "vue": "^2.6.12"
   },
   "devDependencies": {
@@ -29,8 +30,8 @@
     "echarts": "4.9.0",
     "eslint": "^7.20.0",
     "eslint-plugin-vue": "^7.6.0",
-    "sass": "^1.32.8",
     "numeral": "^2.0.6",
+    "sass": "^1.32.8",
     "sass-loader": "10.1.1",
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.5.1",
